[project]
name = "rl-envs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sayantan Auddy", email = "auddy@tu-berlin.de" }
]
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.2",
    "imageio>=2.37.2",
    "matplotlib>=3.10.7",
    "ml-collections>=1.1.0",
    "moviepy>=2.2.1",
    "mujoco>=3.3.7",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
]

[project.scripts]
rl-envs = "rl_envs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
